# STYR

./: .travis.yml  README.md  setVars.sh
analysis/: CMakeLists.txt  FindDelphes.cmake  LinkDef.h  Module.h  Process.cc  Process.h  test.py
analysis/include/styr/: Branch.h  Config.h  Event.h  LinkDef.h  Module.h  Particle.h  Process.h
analysis/plugins/: BTagWeightCalculator.hpp  BTagging.cc  CMakeLists.txt  ElectronSelection.cc  FinalSkim.cc  GenReconstruction.cc  JetMetUncertainty.cc  JetSelection.cc  LinkDef.h  MergeParticles.cc  MuonSelection.cc  NeutrinoPz.cc  NeutrinoPzSolver.cc  NeutrinoPzSolver.hpp  OutputTreeWriter.cc  TopReconstruction.cc
analysis/src/: Branch.cc  Event.cc  Process.cc
analysis/test/: CMakeLists.txt  minitest.h  testBranch.cc  testConfig.cc  testEvent.cc  testModule.cc  testProcess.cc
